--- a/lib/index.scss
+++ b/lib/index.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "theme";
 @import "layout";
 @import "spacing";
@@ -7,3 +8,4 @@
 @import "input";
 @import "buttons";
 @import "card";
+@import "animations";
