--- a/lib/buttons.scss
+++ b/lib/buttons.scss
@@ -1,10 +1,6 @@
 @import "mixins";
-
-@mixin button($primary_color, $text_color, $box_shadow_color) {
-  color: $text_color;
+button {
   outline: none;
-  background: $primary_color;
-  box-shadow: $box_shadow_color;
   padding: 0 1.528em;
   min-height: 2.778em;
   display: inline-flex;
@@ -18,9 +14,16 @@
   font-size: 1em;
   font-weight: 700;
   font-family: var(--font-family-sans-serif);
+}
+
+@mixin button( $color_name, $text_color, ) {
+  color: $text_color;
+  background: var(--#{$color_name}-color);
+  box-shadow: var(--#{$color_name}-box-shadow);
   @include rounded(2px);
 
   &:hover {
+    box-shadow: var(--#{$color_name}-box-shadow-hover)
   }
 
   &:active {
@@ -30,21 +33,21 @@
 
   &.outline {
     background: white;
-    color: $primary_color;
-    border: 1px solid $primary_color;
+    color: var(--#{$color_name}-color);
+    border: 1px solid var(--#{$color_name}-color);
     box-shadow: none;
   }
 
   &.text {
     background: transparent;
-    color: $primary_color;
+    color: var(--#{$color_name}-color);
     border: none;
     box-shadow: none;
     margin: 8px 0;
   }
 
   &.disabled {
-    background: var(--disabled-color);
+    background: var(--#{$color_name}-disabled);
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
@@ -53,16 +56,26 @@
 }
 
 
-
 button {
-  @include button(var(--brand-color), #fff, var(--brand-box-shadow));
+  @include button(brand, #ffffff);
 
   &.danger {
-    @include button(var(--error-color), #fff, var(--error-box-shadow));
+    @include button(error, #ffffff);
   }
 
   &.secondary {
-    @include button(#c3c3c3, #fff, var(--error-box-shadow));
+    @include button(secondary, #fff);
+  }
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+
+  &:hover {
+    text-decoration: underline;
+    color: var(--link-color-hover);
   }
 }
 
