--- a/lib/spacing.scss
+++ b/lib/spacing.scss
@@ -1,10 +1,8 @@
-$spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 25, 30, 35, 40, 45, 50, 75, 100); // Adjust this to include the pixel amounts you need.
-$sides: (top, bottom, left, right);
-
+@import "utils/functions";
 // Spacing
 //
 // Classes to apply spacing (Margin and Padding)
-// Format - m{direction}-{value} | p{direction}-{value}
+// Format - m{direction}-{value} | p{direction}-{value} | w
 //
 // Markup:
 //Valid values for direction:
@@ -12,20 +10,73 @@ $sides: (top, bottom, left, right);
 // -> bottom : b
 // -> left : l
 // -> right : r
+// -> x : left,right
+// -> y : top,bottom
+// -> a : all ( left,right, top,bottom)
 //
 //Valid values for space amounts:
-// -> 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 25, 30, 35, 40, 45, 50, 75, 100
+// -> 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 20, 25, 30, 35, 40, 45, 50, 75, 100, auto
 //
 // Styleguide Spacing
 //
+
+$spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 20, 25, 30, 35, 40, 45, 50, 75, 100, auto); // Adjust this to include the pixel amounts you need.
+$sides: (top, bottom, left, right);
+
 @each $space in $spaceamounts {
+  $suffix_px: ternary($space == 'auto', '', 'px');
+  $suffix_percent: ternary($space == 'auto', '', '%');
   @each $side in $sides {
     .m#{str-slice($side, 0, 1)}-#{$space} {
-      margin-#{$side}: #{$space}px !important;
+      margin-#{$side}: #{$space}#{$suffix_px} !important;
     }
 
-    .p#{str-slice($side, 0, 1)}-#{$space} {
-      padding-#{$side}: #{$space}px !important;
+    @if ($space != 'auto') {
+      .p#{str-slice($side, 0, 1)}-#{$space} {
+        padding-#{$side}: #{$space}#{$suffix_px} !important;
+      }
+    }
+  }
+
+  .w-#{$space} {
+    width: #{$space}#{$suffix_percent} !important;
+  }
+
+  .h-#{$space} {
+    height: #{$space}#{$suffix_percent} !important;
+  }
+
+  .mx-#{$space} {
+    margin-left: #{$space}#{$suffix_px} !important;
+    margin-right: #{$space}#{$suffix_px} !important;
+  }
+
+  .my-#{$space} {
+    margin-top: #{$space}#{$suffix_px} !important;
+    margin-bottom: #{$space}#{$suffix_px} !important;
+  }
+
+  .ma-#{$space} {
+    margin: #{$space}#{$suffix_px} !important;
+  }
+
+  @if ($space != 'auto') {
+    .px-#{$space} {
+      padding-left: #{$space}#{$suffix_px} !important;
+      padding-right: #{$space}#{$suffix_px} !important;
+    }
+  }
+
+  @if ($space != 'auto') {
+    .py-#{$space} {
+      padding-top: #{$space}#{$suffix_px} !important;
+      padding-bottom: #{$space}#{$suffix_px} !important;
+    }
+  }
+
+  @if ($space != 'auto') {
+    .pa-#{$space} {
+      padding: #{$space}#{$suffix_px} !important;
     }
   }
 }
@@ -35,9 +86,9 @@ $sides: (top, bottom, left, right);
 // Use margin classes using m{direction}-{value}
 //
 // Markup:
-//  <div class="mt-1">Margin 1px</div>
+//  <div class="mb-6 ml-9">Margin Left 9px, Margin Bottom 6px</div>
 // Markup:
-//  <div class="mt-30">Margin 30px</div>
+//  <div class="mx-auto w-50">Margin Horizontal Auto</div>
 //
 // Styleguide Spacing.Margin
 
@@ -46,9 +97,9 @@ $sides: (top, bottom, left, right);
 // Use padding classes using p{direction}-{value}
 //
 // Markup:
-//  <div class="pt-1">Padding 1px</div>
+//  <div class="pt-5">Padding Top 1px</div>
 // Markup:
-//  <div class="pt-30">Padding 30px</div>
+//  <div class="pa-30">Padding 30px</div>
 //
 // Styleguide Spacing.Padding
 //
