--- a/lib/theme.scss
+++ b/lib/theme.scss
@@ -2,10 +2,22 @@
 
 //html, body { height: 100%; }
 //body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #fafafa;}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap");
 
 @function hexToRGB($hex) {
   @return red($hex), green($hex), blue($hex);
 }
+
+@mixin color($name, $color) {
+  --#{$name}-color: #{$color};
+  --#{$name}-rgb: #{hexToRGB($color)};
+  --#{$name}-hover: #{lighten($color, 10)};
+  --#{$name}-dark: #{darken($color, 10)};
+  --#{$name}-disabled: #{lighten($color, 20)};
+  --#{$name}-box-shadow: 0 4px 12px #{lighten($color, 15)};
+  --#{$name}-box-shadow-hover: 0 4px 12px #{lighten($color, 25)};
+}
+
 // Primary Colors
 //
 // The primary colors for branding.
@@ -16,19 +28,20 @@
 // error-color      - #a93c32; --error-color
 // brand-color-dark - #007827; --brand-color-dark
 // heading-color    - #3a424e; --heading-color
+// link-color       - #5fa6ff; --link-color
+// link-color-hover - #447dbd; --link-color-hover
 //
 // Styleguide Base.Colors
 :root {
-  --brand-color: #1ba94c;
-  --brand-color-rgb: #{hexToRGB(#1ba94c)};
+  @include color(brand, #1ba94c);
+  @include color(error, #a93c32);
+  @include color(secondary, #097bbf);
   --success-color: #22a97a;
   --disabled-color: #6EA989;
-  --error-color: #a93c32;
-  --brand-color-dark: #007827;
-  --brand-box-shadow: 0 4px 12px rgba(27, 169, 76, 0.5);
-  --error-box-shadow: 0 4px 12px rgba(169, 60, 50, 0.51);
   --font-family-sans-serif: 'Open Sans', sans-serif;
-  --heading-color : #3a424e;
+  --heading-color: #3a424e;
+  --link-color: #5fa6ff;
+  --link-color-hover: #447dbd;
 }
 
 body {
