--- a/lib/typography.scss
+++ b/lib/typography.scss
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.text-start {
+  text-align: start;
+}
+
+.text-end {
+  text-align: end;
+}
+
 .text-capitalize {
   text-transform: capitalize;
 }
@@ -10,9 +18,26 @@
   text-transform: uppercase;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
+.font-weight-light {
+  font-weight: lighter;
+}
+
+.font-weight-medium {
+  font-weight: normal;
+}
+
 $sizes: (1, 2, 3, 4, 5, 6);
 @each $size in $sizes {
-  h#{$size} {
-    color : var(--heading-color);
+  h#{7 - $size} {
+    color: var(--heading-color);
+    font-size: #{0.4 * $size}em;
   }
 }
