Added li classes, refactored button classed, started to use primary-color instead of brand-color

--- a/lib/nav.scss
+++ b/lib/nav.scss
@@ -23,7 +23,7 @@ nav {
 
     .logo {
       height: 44px;
-      color: var(--brand-color);
+      color: var(--primary-color);
       font-size: 1.2em;
     }
   }
