--- a/lib/input.scss
+++ b/lib/input.scss
@@ -5,14 +5,29 @@ input {
   border-radius: 0;
   background-color: #f3f7f7;
   color: #0e141e;
-  height: 32px;
+  height: 36px;
   outline: none;
   font-size: 14px;
   padding: 0 12px;
   border-bottom: 2px solid transparent;
   transition: border-bottom 0.1s ease-in-out;
 
+  &.outlined {
+    border: 2px solid #8b98af;
+    border-radius: 2px;
+  }
+
+  &.large {
+    height: 40px;
+    font-size: 16px;
+  }
+
+  &.white {
+    background: white;
+  }
+
   &:focus {
     border-bottom: 2px solid #2e4163;
   }
+
 }
