--- a/lib/buttons.scss
+++ b/lib/buttons.scss
@@ -10,7 +10,7 @@ button {
   justify-content: center;
   border: none;
   margin: 8px 12px;
-  transition: box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.1s ease;
   cursor: pointer;
   font-size: 1em;
   font-weight: 700;
@@ -32,13 +32,6 @@ button {
     margin: 8px 0;
   }
 
-  &.disabled {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    border: none;
-  }
-
   &.small {
     min-height: 36px;
   }
@@ -50,16 +43,31 @@ button {
   &.large {
     min-height: 52px;
   }
+
+  &.disabled,
+  &:disabled {
+    cursor: not-allowed;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border: none;
+    color: #b7c9cc !important;
+
+    &:active {
+      position: relative;
+      top: 0;
+    }
+  }
 }
 
 @mixin button( $color_name, $text_color, ) {
   color: $text_color;
   background: var(--#{$color_name}-color);
-  box-shadow: var(--#{$color_name}-box-shadow);
+  box-shadow: 0 4px 12px var(--#{$color_name}-box-shadow);
   @include rounded(2px);
 
   &:hover {
-    box-shadow: var(--#{$color_name}-box-shadow-hover)
+    box-shadow: 0 3px 6px var(--#{$color_name}-box-shadow-hover)
   }
 
   &.outlined {
@@ -83,7 +91,8 @@ button {
     border-radius: 0;
   }
 
-  &.disabled {
+  &.disabled,
+  &:disabled {
     background: var(--#{$color_name}-disabled);
     box-shadow: none;
   }
