--- a/lib/theme.scss
+++ b/lib/theme.scss
@@ -44,6 +44,7 @@
   --heading-color: #3a424e;
   --link-color: #5fa6ff;
   --link-color-hover: #447dbd;
+  --disabled-text-color : #b7c9cc;
 }
 
 body {
