--- a/lib/body.scss
+++ b/lib/body.scss
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to bottom, #fff 0%, #f3f7f7 100%);
+  background: linear-gradient(to bottom, #f9f9f9 0%, #f3f7f7 100%);
   min-height: calc(100vh);
 }
 
