--- a/lib/card.scss
+++ b/lib/card.scss
@@ -19,7 +19,15 @@
   &.hoverable {
     box-shadow: 0 16px 32px rgba(99, 118, 129, 0.5);
   }
+
   &.flat {
+    box-shadow: none;
+    background: white;
+  }
+
+  &.outlined {
+    background: white;
+    border: thin solid rgba(var(--primary-rgb), 0.1);
     box-shadow: none;
   }
 
@@ -32,6 +40,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+
+  .card-image {
+    width: 100%;
   }
 }
 
