--- a/lib/theme.scss
+++ b/lib/theme.scss
@@ -34,17 +34,30 @@
 //
 // Styleguide Base.Colors
 :root {
+  // Scope: Base Colors
   @include color(brand, #1ba94c);
   @include color(primary, #1ba94c);
   @include color(secondary, #097bbf);
   @include color(error, #a93c32);
-  --success-color: #22a97a;
-  --disabled-color: #6EA989;
+
+  // Scope: App
+  --app-background : linear-gradient(to bottom, #fff 0%, #f3f7f7 100%);
+
+  // Scope: Typography
   --font-family-sans-serif: 'Open Sans', sans-serif;
   --heading-color: #3a424e;
   --link-color: #5fa6ff;
   --link-color-hover: #447dbd;
-  --disabled-text-color : #b7c9cc;
+
+  // Scope: Toolbar
+  --toolbar-background-color : #39424e;
+  --toolbar-box-shadow-color : rgba(115, 143, 147, 0.3);
+  --toolbar-border-color : #28313d;
+
+  // Scope: Card
+  --card-shadow-color: rgba(99, 118, 129, 0.3);
+  --card-hover-shadow-color: rgba(99, 118, 129, 0.5);
+  --card-margin-gutter : 0px;
 }
 
 body {
