--- a/lib/card.scss
+++ b/lib/card.scss
@@ -13,21 +13,14 @@
 //
 .card {
   background-color: #fff;
-  box-shadow: 0 3px 10px 0 rgba(99, 118, 129, 0.3);
+  box-shadow: 0 3px 10px 0 var(--card-shadow-color);
   transition: box-shadow 0.25s cubic-bezier(0.32, 0.01, 0, 1);
+  margin : var(--card-margin-gutter);
 
   &.hoverable {
-    box-shadow: 0 16px 32px rgba(99, 118, 129, 0.5);
+    box-shadow: 0 16px 32px var(--card-hover-shadow-color);
   }
-
   &.flat {
-    box-shadow: none;
-    background: white;
-  }
-
-  &.outlined {
-    background: white;
-    border: thin solid rgba(var(--primary-rgb), 0.1);
     box-shadow: none;
   }
 
@@ -40,10 +33,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
-
-  .card-image {
-    width: 100%;
   }
 }
 
