--- a/lib/nav.scss
+++ b/lib/nav.scss
@@ -3,12 +3,12 @@ nav {
     height: 60px;
     min-height: 60px;
     line-height: 60px;
-    background: #39424e;
-    border-bottom: 1px solid #28313d;
+    background: var(--toolbar-background-color);
+    border-bottom: 1px solid var(--toolbar-border-color);
     z-index: 900;
     width: 100%;
     box-sizing: border-box;
-    box-shadow: 0 3px 10px 0 rgba(115, 143, 147, 0.3);
+    box-shadow: 0 3px 10px 0 var(--toolbar-box-shadow-color);
     padding: 0 1em;
 
     &.fixed {
