Updated version to v1.0.11. Partial support for dark theme.

--- a/lib/card.scss
+++ b/lib/card.scss
@@ -22,6 +22,13 @@
   }
   &.flat {
     box-shadow: none;
+    background: white;
+  }
+
+  &.outlined {
+    background: white;
+    border: thin solid rgba(var(--primary-rgb), 0.1);
+    box-shadow: none;
   }
 
   .card-text {
