--- a/lib/theme.scss
+++ b/lib/theme.scss
@@ -39,6 +39,8 @@
   @include color(primary, #1ba94c);
   @include color(secondary, #097bbf);
   @include color(error, #a93c32);
+  --success-color: #22a97a;
+  --disabled-color: #6EA989;
 
   // Scope: App
   --app-background : linear-gradient(to bottom, #fff 0%, #f3f7f7 100%);
@@ -48,6 +50,7 @@
   --heading-color: #3a424e;
   --link-color: #5fa6ff;
   --link-color-hover: #447dbd;
+  --disabled-text-color : #b7c9cc;
 
   // Scope: Toolbar
   --toolbar-background-color : #39424e;
